--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,11 @@ platform = espressif32
 board = lolin_s2_mini
 framework = arduino
 monitor_speed = 115200
+build_flags = -D LOLIN_S2_MINI
+
+[env:lolin_s2_pico]
+platform = espressif32
+board = lolin_s2_pico
+framework = arduino
+monitor_speed = 115200
+build_flags = -D LOLIN_S2_PICO
